# hybrid-classical-quantum

./: .gitignore  DATA_COMPLIANCE.md  Final_Presentation_Hybrid_QC_TNBC.pptx  Hybrid_Quantum–Classical_Neural_Networks_for_Personalized_Survival_Prediction_in_Triple‑Negative_Breast_Cancer_A_Fairness‑Aware,_Agentic_Modeling_Framework.ipynb  LICENSE.md  README.md  REPRODUCING.md  TNBC_Binary_Ablation_Clean.csv  TNBC_Quantum_Ablation_Results.csv  TNBC_Survival_Ablation_Results.csv  binary_honest_results.json  binary_v2_result.json  binary_v3_full_result.json  binary_v3_result.json  binary_v4_result.json  consolidate_binary.py  consolidate_results.py  cox_paper_numbers.json  environment.yml  experiment_results.json  extract_paper_numbers.py  generate_paper_figures.py  main.tex  requirements.txt  run_binary_honest.py  run_binary_one.py  run_experiments.py  run_survival_experiments.py  run_survival_residual.py  run_survival_v4.py  survival_residual_results.json  survival_v4_results.json  update_notebook.py  updated_main.tex
codes/: environment.yml  pyproject.toml
codes/1_data_harmonization/: __init__.py  cohort_builder.py  concept_maps.py  omop_schema.py  run_pipeline.py
codes/2_feature_engineering/: __init__.py  mimic_features.py  seer_features.py  tcga_features.py
codes/5_explainability/: __init__.py  attention.py  integrated_gradients.py  lime_explainer.py  report.py  shap_explainer.py
codes/6_survival_modeling/: __init__.py  dataset.py  evaluate.py  fusion.py  losses.py  run_training.py  towers.py  trainer.py
codes/7_disparity_analysis/: __init__.py  fairness.py  (+1 more)
(+32 files in other folders)
