[project]
name = "tnbc-framework"
version = "0.1.0"
description = "Multimodal, explainable, quantum-enhanced survival prediction for Triple-Negative Breast Cancer"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "faker>=25.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "lime>=0.2",
]
full = [
    "pennylane>=0.36",
    "torch>=2.2",
    "transformers>=4.40",
    "scikit-learn>=1.4",
    "lifelines>=0.29",
    "shap>=0.45",
    "lime>=0.2",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
tnbc-harmonize = "1_data_harmonization.run_pipeline:main"
tnbc-train = "6_survival_modeling.run_training:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
